# network-api-support

./: .ghci  .gitignore  .hub  .travis.yml  COPYING  LICENSE  README.md  network-api-support.cabal  network-api-support.cabal tls to 1.5.*  network-api-support.lock-8.0.2  package.yaml  stack.yaml
demo/: Main.hs  network-api-support-demo.cabal
demo/Network/Api/Support/: Demo.hs
http_client_post_0_5/Network/Api/Support/: HandleCodes.hs  RunRequest.hs
http_client_pre_0_5/Network/Api/Support/: HandleCodes.hs  RunRequest.hs
notes/: todo.org
src/Network/Api/: Support.hs
src/Network/Api/Support/: Core.hs  Request.hs  Response.hs  Security.hs
test/: Main.hs  network-api-support-test.cabal
test/Network/Api/Support/: Tests.hs
