Name:               network-api-support-test
Version:            0.0.1
License:            BSD3
Author:             Mark Hibberd <mark@hibberd.id.au>
Maintainer:         Mark Hibberd <mark@hibberd.id.au>
Copyright:          Mark Hibberd
Synopsis:           Test package for Toolkit for building building http client libraries over Network.Http.Conduit"
Category:           Experimental
Description:        Test package for Toolkit for building building http client libraries over Network.Http.Conduit"
Homepage:           https://github.com/apiengine/network-api-support
Cabal-Version:      >= 1.6
Build-Type:         Simple

Source-Repository   head
  Type:             git
  Location:         https://github.com/apiengine/network-api-support.git

Flag                small_base
  Description:      Choose the new, split-up base package.

Executable          migrate-test
  Hs-Source-Dirs:
                    ../../src .

  Main-Is:
                    Main.hs

  Ghc-Options:
                    -O2
                    -Wall
                    -fhpc
                    -fwarn-tabs

  Build-Depends:
                   base >= 3 && < 5
                   , QuickCheck
                   , test-framework
                   , test-framework-quickcheck2
                   , test-framework-hunit

